# QLogic

./: .gitignore  2-2-box-world.m  2-2-test.m  22boxworld.lhs  3-3-bw.m  BoxWorldLogicGenerator.hs  Makefile  Poset.hs  QLogic.hs  README.md  boxesandlogics.nb  boxproduct-query.hs  boxworld.hs  bptest.hs  bwo-static.hs  bwo.hs  bwt.hs  effi.hs  examples.hs  poset.hs  qlogic.cabal  qlogic.hs  stack.yaml  test.hs  two-two-boxworld-generator.hs
Data/: Poset.hs  QLogic.hs
Data/Poset/: ConcretePoset.hs  Examples.hs  Internals.hs
Data/QLogic/: BoxProduct.hs  BoxProductPOrd.hs  BoxWorld.hs  Concrete.hs  Examples.hs  IO.hs  States.hs  Utils.hs
Data/QLogic/Examples/: NonTrivial3.hs  TwoTwoBoxWorld.hs
QLogic/: BoxProduct.hs  BoxWorld.hs  Tools.hs  TwoTwoBoxWorld.hs  boxproduct-devel.hs  boxproduct.hs  boxworld.hs  twotwoboxworld.hs
QLogic/Examples/: Lattice4.hs  Lattice8.hs
research/: boxProduct.lhs  boxWorldGenerator.hs  concrete.hs  concrete3-tests.hs  concrete3.hs  counterexample.hs  counterexample2.hs  greechie.hs  hypos.hs  logicChecks.hs  out  scratch.hs  thoughts
src/: 3box.hs  3boxc.hs  3boxl.hs  BoxModels.hs  QLogic.hs  QStructures.hs  bptest.hs  cart.hs  concrete.hs  concrete3.hs  entangled2box.hs  generating.hs  localized.hs  newapi.hs  statetests.hs  tests.hs  threeboxes.hs  threeobservables.hs
src/BoxModels/: HilbertRepresentation.hs  SetRepresentation.hs
src/Data/: Poset.hs  QLogic.hs  Relation.hs
src/Data/Poset/: ConcretePoset.hs  Examples.hs  Internals.hs
src/Data/QLogic/: BoxProduct.hs  BoxWorld.hs  BoxWorldConcrete.hs  Examples.hs  IO.hs  States.hs  Utils.hs
src/QLogic/: BoxProduct.hs  BoxWorld.hs  Concrete.hs  Examples.hs  GeneralBoxes.hs  IO.hs  Poset.hs  Relation.hs  States.hs  Utils.hs
src/QLogic/Examples/: NonTrivial3.hs
src/QLogic/Poset/: ConcretePoset.hs  Examples.hs  Generic.hs
src/QStructures/: Concrete.hs  Hilbert.hs  IO.hs
tests/: boxProduct.hs  packed_benchmark.hs  poset.hs  test.hs  testWrite.hs  transitiveClosure.hs
