name:                qlogic

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.0
synopsis:            Tools for quantum logic
description:         Provides data structures and function for symbolic manipulation of quantum logic structures.
homepage:            https://github.com/ttylec/QLogic/
license:             MIT
license-file:        LICENSE
author:              Tomasz Tylec
maintainer:          ttylec@gmail.com

category:            Math
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     QStructures, QStructures.Concrete, QStructures.Hilbert
                     , QStructures.IO
                     , BoxModels, BoxModels.SetRepresentation 
                     , BoxModels.HilbertRepresentation

  -- Modules included in this library but not exported.
  other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    GADTs, 
                       MultiParamTypeClasses, FunctionalDependencies,
                       FlexibleInstances
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7, mtl >=2.1, 
                       repa >=3.3, containers >=0.5, 
                       vector >=0.10, parallel >= 3.2,
                       monad-par >=0.3,
                       transformers >=0.3,
                       random >= 1.0,
                       attoparsec >= 0.12, bytestring >= 0.10,
                       glpk-hs >= 0.3.5,
                       hmatrix >= 0.17,
                       linear >= 1.20,
                       text >= 1.2,
                       cereal >= 0.5
  
  -- Directories containing source files.
  hs-source-dirs:      src/ 
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

-- Benchmark packed-qlogic
--     type:               exitcode-stdio-1.0
--     hs-source-dirs:     tests
--     main-is:            packed_benchmark.hs 
--     build-depends:      base, qlogic, criterion
--     ghc-options:        -O2
--     default-language:   Haskell2010
